# try_industrial_ci

./: .travis.yml  README.md
foo/: CMakeLists.txt  package.xml
foo/include/foo/: footils.h
foo/scripts/: foopy
foo/src/: foo_node.cpp  footils.cpp
foo/test/: footils.cpp
sequences/: CMakeLists.txt  package.xml
sequences/include/sequences/: sequences.h
sequences/src/: sequences.cpp
